# archive

./: asterisk-enumlookup_function-1.10.patch  shotgund.patch
BARd/: AUTHORS  ChangeLog  Makefile.in  configure  configure.in
BARd/conf/: Makefile.am  Makefile.in  bard.xml
BARd/src/: Makefile.am  Makefile.in  barcode.cc  barcode.h  bard_config.cc  bard_config.h  bard_evdev.cc  bard_evdev.h  bard_signal.c  bard_signal.h  bard_sys.h  config.h.in  log.cc  log.h
Nominet/dac/: AUTHORS  Doxyfile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  dac.conf
Nominet/dac/lib/: Makefile.in
Nominet/dac/lib/dotconf++/: Makefile.am  Makefile.in  dotconfpp.cc  mempool.h
Nominet/dac/src/: Makefile.am  Makefile.in  config.h.in  dac.cc  dac.h  dac_config.cc  dac_config.h  dac_signal.c  dac_signal.h  dac_string.c  dac_string.h  dac_sys.h  dac_thread.cc  dac_thread.h  decl.h  log.cc  log.h
Outpost/: Makefile.am  Makefile.in  TODO  aclocal.m4  configure  configure.in  my.conf
Outpost/conf/: SSL_HOWTO  insmtpd.conf  log.conf  logd.conf  modules.conf  ssl.conf
Outpost/conf/ssl.ca/: 69bb6a31.0
Outpost/conf/ssl.crl/: README.CRL
Outpost/conf/ssl.crt/: README.CRT  outpost.crt
Outpost/conf/ssl.key/: README.KEY  outpost-nopass.key  outpost.key
Outpost/doc/: Doxyfile
Outpost/libs/: Makefile.am  Makefile.in
Outpost/libs/crypt/: Makefile.am  Makefile.in  md5.cc  md5test.cc  sha1.cc
Outpost/libs/crypt/CVS/: Entries  Repository
Outpost/libs/dotconf++/: Makefile.am  Makefile.in  dotconfpp.cc  dotconfpp.h  mempool.cc  mempool.h
Outpost/libs/dotconf++/CVS/: Entries  Repository  Root
Outpost/scripts/: outpost
Outpost/src/: Makefile.am  Makefile.in  config.h.in  configuration.cc  configuration.h  defines.h  log.cc  log.h  logstore_module.h  main_process.cc  main_process.h  module.cc  module.h  module_manager.cc  module_manager.h  op_base64.h  op_signal.c  op_signal.h  op_string.c  op_string.h  op_sys.c  op_sys.h  outpost.h
Outpost/src/inserver/: Makefile.am  Makefile.in  inserver.cc  inserver.h
Outpost/src/logd/: Makefile.am  Makefile.in  logdlog.cc  logdlog.h  loggingserver.cc  loggingserver.h
asyncresolv/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  (+5 more)
asyncresolv/examples/dnslookup/: Makefile  Makefile.am  Makefile.in  dnslookup  dnslookup.cc
asyncresolv/examples/dnslookup/.deps/: dnslookup.Po
asyncresolv/examples/mx-lookup/: Makefile  Makefile.am  Makefile.in  get-mx-records.cc  mx-lookup
asyncresolv/examples/mx-lookup/.deps/: get-mx-records.Po
asyncresolv/examples/reverse-lookup/: Makefile  Makefile.am  Makefile.in  reverse-lookup.cc  reverse_lookup
asyncresolv/examples/reverse-lookup/.deps/: reverse-lookup.Po
asyncresolv/src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  mempool.lo  reply.cc  reply.h  reply.lo  resolver.cc  resolver.h  resolver.lo  rfc1035.h
asyncresolv/src/.deps/: mempool.Plo  reply.Plo  resolver.Plo
asyncresolv/src/.libs/: libasyncresolv  libasyncresolv.la  libasyncresolv.lai
dotconf++/src/: Makefile  Makefile.am  Makefile.in  dotconfpp.lo  libdotconfpp.la  mempool.lo
dotconf++/src/.deps/: dotconfpp.Plo
dotconf++/src/.libs/: libdotconfpp.lai  libdotconfpp.so.0.0.3
dotconf++/src/example1/: Makefile  Makefile.in  example1  example1.cc
dotconf++/src/example1/.deps/: example1.Po
dotconf++/src/example2/: Makefile  Makefile.in  example2  example2.cc
dotconf++/src/example2/.deps/: example2.Po
embedhttp/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in  embedhttp.spec
embedhttp/examples/: Makefile.am  Makefile.in
embedhttp/examples/dynamic_content/: Makefile.am  Makefile.in  server.cc
embedhttp/examples/file_content/: Makefile.in  server.cc
embedhttp/examples/static_content/: Makefile.in  server.cc
embedhttp/include/: Makefile.am  Makefile.in  config.h.in
embedhttp/include/embedhttp/: clientsocket.h  content.h  dispatcher.h  functions.h  log.h  main.h  mempool.h  request.h  response.h  server.h  serversocket.h  session.h
embedhttp/src/: Makefile.am  Makefile.in  clientsocket.cc  content.cc  dispatcher.cc  functions.cc  log.cc  mempool.cc  request.cc  response.cc  server.cc  serversocket.cc  session.cc
md5sha1/: Makefile.am  Makefile.in  README  configure  configure.in
md5sha1/src/: Makefile.am  Makefile.in  config.h.in  md5.h  sha1.h  sha1test.cc
probed/: Doxyfile  Makefile.am  Makefile.in  README  configure  configure.in  probed.conf
probed/conf/: SSL_HOWTO
probed/conf/ssl.ca/: my-ca.crt  my-ca.key
probed/conf/ssl.crl/: README.CRL
probed/conf/ssl.crt/: README.CRT  server.crt  server.csr
probed/conf/ssl.key/: README.KEY  server-nopass.key  server.key
probed/lib/: Makefile.am  Makefile.in
probed/lib/dotconf++/: Makefile.in  dotconfpp.h  mempool.cc
probed/src/: Makefile.am  Makefile.in  decl.h  history.cc  history.h  log.cc  log.h  probed.cc  probed.h  probed_commands.cc  probed_commands.h  probed_config.cc  probed_config.h  probed_ping_task.h  probed_ping_thread.cc  probed_ping_thread.h  probed_signal.c  probed_signal.h  probed_ssl.cc  probed_ssl.h  probed_ssl_transport.cc  probed_ssl_transport.h  probed_string.c  probed_string.h  probed_sys.h  probed_thread.cc  probed_thread.h  probed_thread_manager.cc  probed_thread_manager.h  thread_queue.h
shotgund/lib/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  libasyncresolv.la  reply.cc  reply.h  resolver.cc  resolver.h  rfc1035.h
shotgund/lib/.deps/: mempool.Po  reply.Po  resolver.Po
shotgund/lib/dotconf++/: Makefile  Makefile.am  Makefile.in  dotconfpp.cc  libdotconfpp.la
shotgund/lib/dotconf++/.deps/: dotconfpp.Po  mempool.Po
shotgund/src/: Makefile  Makefile.am  Makefile.in  decl.h  log.cc  log.h  resolver_thread.cc  resolver_thread.h  shotgund.cc  shotgund.h  shotgund_config.cc  shotgund_config.h  shotgund_resolver.cc  shotgund_resolver.h  shotgund_signal.c  shotgund_signal.h  shotgund_sys.h  thread_manager.h  thread_queue.h
shotgund/src/.deps/: log.Po  resolver_thread.Po  shotgund.Po  shotgund_config.Po  shotgund_resolver.Po  shotgund_signal.Po
(+28 files in other folders)
