#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(md5sha1, 0.0.1, a.krivoshey@kharkiv.com.ua)
AM_INIT_AUTOMAKE(md5sha1, 0.0.1, a.krivoshey@kharkiv.com.ua)
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADER([src/config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.

AC_CHECK_LIB([c_r], [pthread_create])
AC_CHECK_LIB([pthread], [pthread_create])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([gettimeofday memset])

##############################################################################

# Compiler features options
CXXFLAGS="${CXXFLAGS} ${PTH_CFLAGS} -fno-exceptions -fno-rtti"
# Optimization options
CXXFLAGS="${CXXFLAGS} -O2 -fomit-frame-pointer -fexpensive-optimizations"
# Compiling options
CXXFLAGS="${CXXFLAGS} -pipe"
# Warning options 
CXXFLAGS="${CXXFLAGS} -Werror -Wall -Winline"
# 
CXXFLAGS="${CXXFLAGS} -D_REENTRANT -D_THREAD_SAFE"

# All is same for C
CFLAGS=$CXXFLAGS

##############################################################################

AC_CONFIG_FILES([src/Makefile
		Makefile])
AC_OUTPUT
