nobase_include_HEADERS = embedhttp/server.h \
	     embedhttp/content.h \
	     embedhttp/request.h \
	     embedhttp/response.h \
	     embedhttp/main.h \
	     embedhttp/functions.h \
	     embedhttp/mempool.h \
	     embedhttp/clientsocket.h \
	     embedhttp/serversocket.h \
	     embedhttp/log.h \
	     embedhttp/session.h \
	     embedhttp/dispatcher.h

