#LIBdir = /usr/local/lib

INCLUDES = -I.
#AM_CPPFLAGS = -D_REENTRANT -fno-exceptions -fno-rtti -fomit-frame-pointer -fexpensive-optimizations -pipe -Werror -Wall -Winline

noinst_LIBRARIES = libdotconfpp.a
#LIB_LTLIBRARIES = libdotconfpp.la

libdotconfpp_a_SOURCES = dotconfpp.cc mempool.cc
#libdotconfpp_la_SOURCES = dotconfpp.cc

#libdotconfpp_la_LDFLAGS = -version-info 0:1:0 -export-dynamic
