#LIBdir = ${prefix}/lib

#INCLUDES = -I. -I.. -I${top_srcdir}

#LIB_LTLIBRARIES = libdotconfpp.la

#libdotconfpp_la_SOURCES = dotconfpp.cc ../mempool.cc
#include_HEADERS = dotconfpp.h ../mempool.h

#libdotconfpp_la_LDFLAGS = -version-info 0:3:0 -export-dynamic

noinst_LIBRARIES = libdotconfpp.a

libdotconfpp_a_SOURCES = dotconfpp.cc ../mempool.cc dotconfpp.h
